--- a/style.css
+++ b/style.css
@@ -47,10 +47,20 @@ a{
 
 #results{
     flex-grow: 8;
-    display: flex;
+    display:flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
+}
+
+.userMove{
+    flex-shrink: 1;
+    max-width: 300px;
+}
+
+.computerMove{
+    flex-shrink: 1;
+    max-width: 300px;
 }
 
 .movecard{
